room entity at door